<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ColorBlindTest" android:background="#FFFFFF">

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:id="@+id/view_toolbar"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imgToolbarIcon"
            app:srcCompat="@drawable/opencolortransparentlogo"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            app:layout_constraintStart_toStartOf="@+id/toolbar" app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp" app:srcCompat="@drawable/colorblindtest01"
            android:id="@+id/imgTest1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.25"/>
    <TextView
            android:text="@string/choose_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/imgTest1" app:layout_constraintVertical_bias="0.71000004"
            android:textStyle="bold" android:textSize="24sp"/>
    <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etAnswer1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTest1" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.050000012" android:gravity="center_horizontal" android:hint="0"/>
    <Button
            android:text="@string/next"
            android:layout_height="wrap_content"
            android:layout_width="120dp"
            android:background="@drawable/custom_button"
            android:textColor="@color/colorPrimary"
            android:id="@+id/btnNext"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAnswer1" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.8"/>
    <Button
            android:text="@string/not_sure"
            android:layout_height="wrap_content"
            android:layout_width="120dp"
            android:background="@drawable/custom_button"
            android:textColor="@color/colorPrimary"
            android:id="@+id/btnNotSure" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAnswer1" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation"
            android:background="#FFFFFF"
            app:labelVisibilityMode="labeled"
    />
</androidx.constraintlayout.widget.ConstraintLayout>